ide:feat: code templates